# dmarc-report

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  justfile  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
schema/: __init__.py  download.py
schema/download/: rua.xsd
src/dmarc_report/: __init__.py  display.py  dmarc.xsd  dmarc_parser.py  parser.py  report.py  rfc7489_fixed.xsd  rua_modified.xsd  schema.py  ui.py
tests/: test_reports.py
tests/reports/: dmarc-empty-sp.xml  dmarc-feedback_namespace.xml  dmarc-invalid-1.xml  dmarc-invalid-2.xml  dmarc-invalid-3.xml  dmarc-invalid-4.xml  dmarc-sample-1.xml  dmarc-sample-2.xml  dmarc-sample-3.xml
