[project]
name = "dmarc-report"
version = "0.1.0"
description = "Displays a nicely formatted report in your terminal from a DMARC XML report."
readme = "README.md"
authors = [{ name = "Stuart Maxwell", email = "stuart@amanzi.nz" }]
requires-python = ">=3.9"
dependencies = ["defusedxml>=0.7.1", "rich>=13.9.4"]

[project.scripts]
dmarc-report = "dmarc_report.report:report"

[dependency-groups]
dev = ["bumpver>=2024.1130"]

[project.optional-dependencies]
test = ["nox>=2024.10.9", "pytest>=8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"
select = ["ALL"]
ignore = [
    "D203",  # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/
    "D213",  # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
    "UP007",
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.per-file-ignores]
"test*" = ["ALL"]

[tool.pytest.ini_options]
python_files = "test_*.py"
