[project]
name = "dmarc-report"
version = "2.2.1"
description = "Displays a nicely formatted report in your terminal from a DMARC XML report."
readme = "README.md"
authors = [
    { name = "Stuart Maxwell", email = "stuart@amanzi.nz" },
]
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.7.1",
    "rich>=13.9.4",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "dmarc",
    "email",
    "security",
    "spf",
    "dkim",
    "dmarc-report",
    "dmarc-xml",
]
[project.urls]
Homepage = "https://github.com/stuartmaxwell/dmarc-report"
Repository = "https://github.com/stuartmaxwell/dmarc-report"
Issues = "https://github.com/stuartmaxwell/dmarc-report/issues"

[project.scripts]
dmarc-report = "dmarc_report.report:report"

[dependency-groups]
dev = [
    "bumpver~=2026.1132",
    "nox[pbs]~=2026.7",
    "pytest~=9.1",
    "ruff~=0.15",
    "pre-commit~=4.6",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
python_files = "test_*.py"

[tool.bumpver]
current_version = "2.2.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "👍 bump version {old_version} -> {new_version}"
commit = true
push = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"src/dmarc_report/__init__.py" = ['^__version__ = "{version}"$']

[tool.pdm]
distribution = true
